# effective-CPP

./: .gitignore  README.md
effective/item43/: CMakeLists.txt  main.cpp
item1/: README.md
item10/: CMakeLists.txt  README.md  item.h  item10.h  main.cpp
item11/: CMakeLists.txt  README.md  item11.h  main.cpp
item12/: CMakeLists.txt  README.md  main.cpp
item13/: README.md
item14/: README.md  item14.h  main.cpp
item15/: README.md  item.h  item15.h  main.cpp
item16/: README.md
item17/: main.cpp
item18/: README.md  item.h  main.cpp
item19/: README.md  item.h  item19.h  main.cpp
item2/: README.md  item2.h  main.cpp
item20/: README.md
item21/: README.md
item22/: Widget.cpp  Widget.h
item23/: README.md  item.h
item24/: CMakeLists.txt  README.md  item.h  item24.cpp  item24.h
item25/: item25.h
item26/: README.md
item27/: README.md  item.h  main.cpp
item28/: CMakeLists.txt  README.md  item.h
item29/: README.md
item3/: CMakeLists.txt  README.md  item.h  item3.h  main.cpp
item30/: README.md  item.h  item30.cpp  item30.h
item31/: CMakeLists.txt  README.md  WidgetImpl.cpp  WidgetImpl.h  main.cpp
item32/: item.h  main.cpp
item33/: main.cpp
item34/: README.md  main.cpp
item35/: README.md
item37/: README.md  item.h  main.cpp
item38/: README.md
item39/: README.md  item.h  main.cpp
item4/: CMakeLists.txt  README.md  item4.h  main.cpp
item40/: CMakeLists.txt  main.cpp
item41/: CMakeLists.txt  item.h  main.cpp
item42/: README.md  item42.h  main.cpp
item43/: README.md  item43.h
item45/: README.md  item45.h  main.cpp
item46/: README.md  item46.h
item47/: CMakeLists.txt  README.md  (+1 more)
(+189 files in other folders)
